# Pyneat

./: .cursorrules  .git_commit_msg.txt  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  CITATION.cff  CLA.md  CODE_OF_CONDUCT.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  LICENSE  LICENSE_COMMERCIAL.md  MANIFEST.in  MULTI_LANGUAGE_PLAN.md  NOTICE  README.md  RULE_REFERENCE.md  SECURITY.md  TEST_ISSUES.md  TRADEMARK.md  _test_yaml_fix.py  add_replacement.py  benchmark_results.json  build.ps1  build.sh  cs2_rank.clean.py  cs2_rank.py  demo_quickstart.py  find_set_trace.py  fix_debug.py  fix_remaining.py  inject_wheel.py  pyneat-v2.2.5-intro.md  pyneat-v2.2.5-security-rules.md  pyneat_bug_report.json  pyproject.toml  release-notes.md  setup.py  show_context.py  (+8 more)
.gitlab/: merge-request-pyneat.yml
.gitlab-ci/: pyneat.yml
.pre-commit-hooks/: pyneat-clean.py
.vscode-extension/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
benchmarks/: conftest.py  test_batch_processing.py  test_parsing.py
demo/: BEFORE_SCAN.txt  COMPARISON_REPORT.md  after.py  before.py  demo_security_vulnerabilities.py  run_demo.py
docs/: agent-to-agent-protocol.md  api.md  architecture.md  case_studies.md  faq.md  github-actions-guide.md  index.md  landing.md  quickstart.md  rules.md  unified-architecture.md  writing-rules.md
examples/: __init__.py  basic_usage.py  batch_processing.py  custom_rule.py  pre_commit_integration.py  security_scan.py
jetbrains-plugin/: README.md  build.gradle.kts  settings.gradle.kts
nvim-lsp/: README.md  pyneat_lsp.lua
pyneat/: LSP_README.md  __init__.py  __main__.py  benchmark.py  cli.py  config.py  config_loader.py  lsp.py  pre_commit.py
pyneat-rs/: Cargo.toml  IMPROVEMENTS.md  PYO3_CONFIG_FILE.toml  README.md  RULE_AUDIT.md  bench_python.py  compare_with_competitors.py  test_code.py  test_rust.py  test_scanner.py
pyneat-rs/benches/: rule_benchmark.rs  scanner_benchmark.rs
pyneat-rs/pyneat/: __init__.py  __main__.py  cli.py
pyneat-rs/pyneat/cli/: __init__.py  cli_impl.py  core.py
pyneat-rs/pyneat/cli/commands/: utils.py
pyneat-rs/pyneat/cli/testing/: __init__.py  cli_tester.py
pyneat-rs/pyneat/core/: manifest_schema.py
pyneat-rs/pyneat/rules/: iac_security_rules.py
pyneat-rs/pyneat/rules/security_pack/: go.py
pyneat-rs/pyneat_junc/: __init__.py  cli.py
pyneat-rs/pyneat_junc/core/: engine.py  incremental_cache.py  types.py
pyneat-rs/pyneat_junc/plugins/: base.py
pyneat-rs/pyneat_junc/rules/: deadcode.py  debug.py  magic_numbers.py  quality.py  range_len_pattern.py  redundant.py  refactoring.py  secrets.py  security.py  security_registry.py  taint_analysis.py  typing.py  unused.py
pyneat-rs/pyneat_junc/rules/rust/: security.py
pyneat-rs/pyneat_junc/rules/security_pack/: __init__.py  critical.py  ruby.py
pyneat-rs/pyneat_junc/tools/: policy_engine.py
pyneat-rs/src/: findings_dedup.rs  lib.rs  lib_tests.rs  main.rs
pyneat-rs/src/ai_analysis/: mod.rs
pyneat-rs/src/ai_security/: ast_ai_security.rs  mod.rs  rules.rs
pyneat-rs/src/fixer/: apply_fix.rs  diff.rs  mod.rs
pyneat-rs/src/integrations/: github.rs  mod.rs  sonarqube.rs
pyneat-rs/src/rules/: ast_rules.rs  base.rs  extended_security.rs  hackingtool_patterns.rs  mod.rs  quality.rs  sec024.rs  sec025.rs  sec026.rs  sec042.rs  sec043.rs  sec044.rs  sec060.rs  sec061.rs  sec062.rs  sec063.rs  sec064.rs  sec065.rs  sec066.rs  sec067.rs  sec068.rs  sec069.rs  sec070.rs  sec071.rs  sec072.rs  security.rs
pyneat-rs/src/rules/php_rules/: mod.rs  php.rs
pyneat-rs/src/sarif/: mod.rs
pyneat-rs/src/scanner/: base.rs  iac.rs  ln_ast.rs  ln_ast_converter.rs  mod.rs  multilang.rs  taint_lang_rule.rs  tree_sitter.rs
pyneat-rs/src/scanner/csharp/: mod.rs  parser.rs  quality_rules.rs  rules.rs
pyneat-rs/src/scanner/enterprise/: infrastructure_security.rs  mod.rs  scanner.rs
pyneat-rs/src/scanner/go/: mod.rs  parser.rs  quality_rules.rs
pyneat-rs/src/scanner/go/rules/: gosec_rules.rs  mod.rs  rules.rs
pyneat-rs/src/scanner/java/: mod.rs  parser.rs  quality_rules.rs  rules.rs  security_rules.rs
pyneat-rs/src/scanner/javascript/: mod.rs  parser.rs  quality_rules.rs  rules.rs  security_rules.rs
pyneat-rs/src/scanner/php/: mod.rs  parser.rs  quality_rules.rs  rules.rs  security_rules.rs
pyneat-rs/src/scanner/ruby/: mod.rs  parser.rs  quality_rules.rs  rules.rs
pyneat-rs/src/scanner/ruby/security_rules/: mod.rs  security_rules.rs
pyneat-rs/src/scanner/rust/: mod.rs  parser.rs  quality_rules.rs  rules.rs  security_rules.rs
pyneat-rs/src/scanner/taint/: engine.rs  labels.rs  rules.rs  tests.rs
pyneat-rs/src/scanner/typescript/: mod.rs  security_rules.rs
pyneat-rs/test-samples/: sample.cs  sample.java  sample.rs  vuln.go
pyneat-rs/test-samples/enterprise-demo/: 05-javascript-vulns.js  06-go-vulns.go  README.md
pyneat-rs/tests/: test_multilang.rs  test_rules.rs
pyneat-workspace/: Cargo.toml  README.md
pyneat-workspace/pyneat-core/: Cargo.toml  README.md
pyneat-workspace/pyneat-core/src/: lib.rs  protocol.rs
pyneat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
pyneat_cli/: __init__.py  cli.py
pyneat_cli-3.0.6/: LICENSE  PKG-INFO  pyproject.toml
pyneat_dashboard/: main.py  pyproject.toml  requirements.txt
pyneat_fuzz_results/: PYNEAT_FUZZ_REPORT_20260416_152200.json  PYNEAT_FUZZ_REPORT_20260416_152254.json  PYNEAT_FUZZ_REPORT_20260416_152313.json  PYNEAT_FUZZ_REPORT_20260416_152928.json  PYNEAT_FUZZ_SUMMARY_20260416_152200.txt  PYNEAT_FUZZ_SUMMARY_20260416_152254.txt  PYNEAT_FUZZ_SUMMARY_20260416_152313.txt  PYNEAT_FUZZ_SUMMARY_20260416_152928.txt
pyneat_rs/: __init__.py
test-samples/: run_tests.py
test_samples/: flappybird_messy.py  messy_python3.py  pastebin_horrendous.py  sample_csharp.cs  sample_go.go  sample_java.java  sample_javascript.js  sample_php.php  sample_python.py  sample_ruby.rb  sample_rust.rs  sample_typescript.ts
tests/: test_engine.py  test_fuzz.py  test_fuzz_github.py  test_integration.py  test_layers.py  test_property.py  test_real_world.py  (+4 more)
(+330 files in other folders)
