[package]
name = "pyneat-rs"
version = "3.0.1"
edition = "2021"
description = "High-performance security scanner for PyNeat written in Rust"
authors = ["Khanh Nam <khanhnam.copywriting@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/pyneat/pyneat"
readme = "README.md"
keywords = ["security", "scanner", "python", "static-analysis"]
categories = ["security", "development-tools"]

[lib]
name = "pyneat_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "pyneat"
path = "src/main.rs"

[dependencies]
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
ahash = "0.8"
walkdir = "2.4"
pyo3 = { version = "0.28", features = ["extension-module"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
once_cell = "1.19"

# Tree-sitter for AST parsing
tree-sitter = "0.23"
tree-sitter-python = "0.23"

# Multi-language tree-sitter grammars (for multi-language support)
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
maturin = "1.5"
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"

[[bench]]
name = "scanner_benchmark"
harness = false

[[bench]]
name = "rule_benchmark"
harness = false
