[workspace]
resolver = "2"
members = [
    "pyneat-core",
]
# NOTE: pyneat-pro-engine has been moved to D:\pyneat-pro-engine
# It is a proprietary binary, not part of the open-source repository.

[workspace.package]
version = "3.0.0"
authors = ["Khanh Nam <khanhnam.copywriting@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
# Core dependencies
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
ahash = "0.8"
walkdir = "2.4"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tree-sitter
tree-sitter = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.23"
tree-sitter-ruby = "0.23"

# Python binding
pyo3 = { version = "0.28", features = ["extension-module"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Utilities
once_cell = "1.19"
thiserror = "1.0"
